--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "run": "npx webpack --mode=development --watch",
     "build": "npx webpack --mode=production",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "",
@@ -25,7 +26,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-inline-source-plugin": "^1.0.0-beta.2",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^7.0.4",
     "jest": "^27.4.6",
+    "lint-staged": "^12.1.5",
     "prettier": "^2.5.1",
     "style-loader": "^3.3.1",
     "ts-jest": "^27.1.2",
@@ -35,5 +38,8 @@
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
